<resources>
    <string name="app_name">Evento Mágico</string>
    <string name="name">Evento Mágico</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="create_evn">Crear Evento</string>
    <string name="mis_evn">Mis Eventos</string>
    <string name="calendar">Calendario</string>
    <string name="mi_prof">Mi Perfil</string>
    <string name="config">Configuraciones</string>
    <string name="welcome">Bienvenido/a</string>ç
    <string name="nombre_evento">Nombre del Evento</string>
    <string name="desc_evento">Descripción del Evento</string>
    <string name="fecha_evento">Fecha del Evento</string>
    <string name="ubi_evento">Ubicación del Evento</string>
    <string name="btn_guardaEvento">Guardar Evento</string>
    <string name="btn_Cancelar">Cancelar</string>
    <string name="evento">Evento</string>
    <string name="edit">Editar</string>
    <string name="eliminar">Eliminar evento</string>
    <string name="guardar">Guardar cambios</string>
    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">Close</string>
    <string name="editchanges">Editar Perfil</string>
    <string name="closesession">Cerrar Sesión</string>
    <string name="welc_profile">Bienvenido a tu perfil</string>
    <string name="cerrarSesionApprove">¿Estás seguro de que deseas cerrar sesión?</string>
    <string name="eliminarApprove">¿Estás seguro de que deseas eliminar el evento?</string>
    <string name="approve">Si</string>
    <string name="deny">No</string>
    <string name="correo">Correo</string>
    <string name="pass">Contraseña</string>
    <string name="registro">Bienvenid@!, registrate usando Correo y Contraseña!</string>
    <string name="reg">Guardar Registro</string>
    <string name="noaccount">Crea una cuenta aquí</string>
    <string name="agg_even">Agregar Evento</string>
    <string name="iniciar">Iniciar Sesión</string>
    <string name="olvidaste">¿Olvidaste tu contraseña?</string>
    <string name="catEven">Categoría del Evento</string>
    <string name="infoe">Ingresa la categoría del evento</string>
    <string name="cambiap">Cambiar Contraseña</string>
    <string name="newpass">Nueva Contraseña</string>
    <string name="confirmpass">Confirmar nueva contraseña</string>
</resources>