<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blanco_suave">

    <ImageView
        android:id="@+id/imageViewReg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:src="@drawable/logo2" />
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/etNContra"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="55dp"
        android:hint="@string/newpass"
        android:padding="10dp"
        android:inputType="textEmailAddress">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etNuevaContrasena"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/etConfirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="55dp"
        android:hint="@string/confirmpass"
        android:padding="10dp"
        android:inputType="textEmailAddress">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etConfirmarContrasena"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnCambiarContrasena"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/Widget.Material3.Button.ElevatedButton"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:text="@string/cambiap" />

</LinearLayout>
